alignment corrected

--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -7,7 +7,7 @@
 .content{
     padding-top: 140px;
     height: 190px;
-    padding-left: 15px;
+    padding-left: 25px;
 }
 .title{
     font-size: 3rem;
